<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/welcome"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="112dp"
        android:text="@string/welcome"
        android:textSize="30dp" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/welcomStatment"
        android:layout_below="@+id/welcome"
        app:lottie_rawRes="@raw/data"
        android:layout_marginBottom="390dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_url="REPLACE_JSON_URL" />

    <TextView
        android:id="@+id/welcomStatment"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/taking_care_of_plants_has_never_been_easier_but_with_plant_life_it_will_be_fun"
        android:textSize="28dp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/animationView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/start"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcomStatment"
        android:gravity="center"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="1dp"
        android:text="@string/get_started" />

    <Button
        android:id="@+id/have_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start"
        android:layout_marginTop="13dp"
        android:text="@string/alredy_have_account" />

</RelativeLayout>