<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.DetailsPlantPage">

<data>
    <variable
        name="viewModel1"
        type="com.example.plant_life.model.PlantViewModel" />
    <variable
        name="deteilsFragment"
        type="com.example.plant_life.fragments.DetailsPlantPage" />
    <variable
        name="plantInfo1"
        type="com.example.plant_life.dataApi.ResponseItem" />
</data>



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/cover_pic"
                android:layout_width="600dp"
                android:layout_height="400dp"
                android:layout_marginTop="-50dp"
                android:src="@drawable/add_to_my_plant_icon"
                app:imageUrl="@{viewModel1.plantImageBackground}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.cardview.widget.CardView
                android:layout_width="380dp"
                android:layout_height="450dp"
                android:layout_marginTop="200dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/plant_img"
                            android:layout_width="150dp"
                            android:layout_height="160dp"
                            android:layout_margin="8dp"
                            app:shapeAppearance="@style/RoundedSquare"
                            android:scaleType="fitXY"
                            app:imageUrl="@{viewModel1.plantImage}"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/name"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="15dp"
                            android:layout_marginEnd="8dp"
                            android:text="@{viewModel1.plantName}"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toEndOf="@id/plant_img"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/plant_img"
                            />

                    <TextView
                        android:id="@+id/alarmTittel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set_alarem"
                        android:textStyle="italic"
                        android:textSize="16dp"
                        app:layout_constraintTop_toTopOf="@+id/alarmButton"
                        app:layout_constraintStart_toEndOf="@+id/alarmButton"
                        app:layout_constraintBottom_toBottomOf="@id/alarmButton"
                        />

                    <View
                        android:id="@+id/view"
                        android:layout_width="180dp"
                        android:layout_height="1dp"
                        android:layout_marginTop="40dp"
                        android:background="@color/greenicon"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/plant_img"
                        app:layout_constraintTop_toBottomOf="@+id/name" />

                    <Button
                        android:id="@+id/alarmButton"
                        style="@style/RoundedSquare"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="4dp"
                        android:minWidth="0dp"
                        android:clickable="true"
                        android:paddingStart="8dp"
                        android:paddingEnd="5dp"
                        app:backgroundTint="@color/white"
                        app:icon="@drawable/alarm"
                        app:iconGravity="textEnd"

                        app:iconPadding="0dp"
                        app:iconSize="18dp"
                        app:layout_constraintStart_toEndOf="@id/plant_img"
                        app:layout_constraintTop_toBottomOf="@+id/view"
                        app:layout_constraintVertical_bias="0.0" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardWater"
                        android:layout_width="100dp"
                        android:layout_height="250dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="8dp"
                        app:cardBackgroundColor="#daeffa"
                        android:background="@color/babyBlu"
                        app:cardCornerRadius="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/plant_img">
                        <TextView
                            android:id="@+id/watringtitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/watring"
                            android:textColor="#00266f"
                            android:textStyle="bold"
                            app:layout_constraintStart_toEndOf="@id/carLight"
                            />


                        <TextView
                            android:id="@+id/wataring"
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_marginTop="24dp"
                            android:layout_marginStart="8dp"
                            android:drawableBottom="@drawable/cloud"
                            android:layout_marginEnd="8dp"
                            android:text="@{viewModel1.Watering}"
                            app:layout_constraintStart_toEndOf="@id/carLight"
                            app:layout_constraintTop_toBottomOf="@id/watringtitle" />
                    </androidx.cardview.widget.CardView>


                    <androidx.cardview.widget.CardView
                        android:id="@+id/carLight"
                        android:layout_width="100dp"
                        android:layout_height="250dp"
                        android:layout_marginStart="16dp"
                        android:background="@color/babyYallo"
                        app:cardBackgroundColor="#ffffe8"
                        app:cardCornerRadius="10dp"
                        app:layout_constraintBottom_toBottomOf="@+id/cardWater"
                        app:layout_constraintStart_toEndOf="@id/cardWater"
                        app:layout_constraintTop_toTopOf="@+id/cardWater">

                        <TextView
                            android:id="@+id/lightingtitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/lighting"
                            android:textColor="#D0A73C"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent" />

                        <TextView
                            android:id="@+id/lighting"
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="24dp"
                            android:layout_marginEnd="8dp"
                            android:drawableBottom="@drawable/sun_icon"
                            android:text="@{viewModel1.Lighting}"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/lightingtitle" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardtemprech"
                        android:layout_width="100dp"
                        android:layout_height="250dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="8dp"
                        app:cardBackgroundColor="#F7F0F0"
                        app:cardCornerRadius="10dp"
                        app:layout_constraintBottom_toBottomOf="@+id/carLight"
                        app:layout_constraintStart_toEndOf="@id/carLight"
                        app:layout_constraintTop_toTopOf="@+id/carLight">
                        <TextView
                            android:id="@+id/tempretioName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/tempreture"
                            android:textColor="#C18C8C"
                            android:textStyle="bold"
                            app:layout_constraintStart_toEndOf="@id/carLight"
                            />


                        <TextView
                            android:id="@+id/tempreture"
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="24dp"
                            android:drawableBottom="@drawable/fireicon"
                            android:text="@{viewModel1.temperature}"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tempretioName" />
                    </androidx.cardview.widget.CardView>



                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

</layout>